<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/action_reminders"
            android:title="@string/reminders"
            android:icon="@drawable/ic_notifications"/>

        <item
            android:id="@+id/action_trashbox"
            android:title="@string/trashbox"
            android:icon="@drawable/ic_delete"/>

        <item
            android:id="@+id/action_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>

        <item
            android:id="@+id/action_information"
            android:title="@string/about_app"
            android:icon="@drawable/ic_info"
            />
    </group>

</menu>