<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/order_direction"
        android:title="Direction"
        app:showAsAction="always"
        android:icon="@drawable/ic_arrow_downward">

    </item>

    <item
        android:id="@+id/sorter"
        android:title="Filter"
        app:showAsAction="always"
        android:icon="@drawable/ic_sort"

        >
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/order_by_date"
                    android:title="@string/date"
                    android:checked="true"/>
                <item
                    android:id="@+id/order_by_is_favourite"
                    android:title="@string/is_favourite"
                    />
                <item
                    android:id="@+id/order_by_text_amount"
                    android:title="@string/text_amount"
                    />

            </group>


        </menu>
    </item>



</menu>